# Google-ADK-Framework

./: .gitignore  DOCUMENTATION.md  QUICK_START.md  README.md  README_DEV.md  adk_adapter.py  advisor_agent.py  agent_implementations.py  agents_catalog.py  dashboard.py  demo_app.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
agents/: __init__.py  control_agent.py  decision_agent.py  framework_analyzer_agent.py  profiler_agent.py  requirements_agent.py  usecase_analyzer_agent.py
data/: bosch_usecases_seed.py
data/chroma/: chroma.sqlite3
data/feedback/: sessions.jsonl
gradio_cached_examples/9/: log.csv
memory/: __init__.py  feedback_store.py
models/: __init__.py  schemas.py
my_agent/: .env  agent.py  doc_loader.py  framework_docs_config.py
orchestrator/: __init__.py  langgraph_flow.py
utils/: llm_cache.py
